# AppImageServices

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README-API.md  README.md  conanfile.py  conanfile.txt
ci/: Dockerfile  build_appimage.sh  build_in_docker.sh  create_appimage.sh  docker_build.sh
res/: CMakeLists.txt  org.appimage.services.appdata.xml  org.appimage.services.desktop
src/: CMakeLists.txt  appimage-services-wrapper.sh  export_pkg_config_path.cmake  main.cpp
src/common/: CMakeLists.txt  utils.cpp  utils.h
src/dbus/: CMakeLists.txt  DBusInterface.cpp  DBusInterface.h  DBusResponseType.h  main.cpp
src/inspector/: AbstractReader.h  AppImageInfoReader.cpp  AppImageInfoReader.h  AppStreamReader.cpp  AppStreamReader.h  ApplicationInfo.cpp  ApplicationInfo.h  CMakeLists.txt  DesktopEntryReader.cpp  DesktopEntryReader.h  InspectorDBusInterface.cpp  InspectorDBusInterface.h  InspectorDefines.h
src/installer/: CMakeLists.txt  Helpers.cmake  Installer.cpp  Installer.h  InstallerDBusInterface.cpp  InstallerDBusInterface.h  InstallerDefines.h  InstallerError.cpp  InstallerError.h  appimage-services-installer.sh  appimage-services-uninstaller.sh  install-helper.cpp  uninstall-helper.cpp
src/installer/utils/: binfmt.sh  debug-header.sh  launcher_desktop_entries.sh  settings.sh  update_launchers_desktop_entries.sh
src/launcher/: CMakeLists.txt  DBusInterface.cpp  DBusInterface.h  LauncherDBusInterface.cpp  LauncherDBusInterface.h  LauncherDefines.h  LauncherService.cpp  LauncherService.h
src/launcher/runtimes/: CMakeLists.txt  runtime-wrapper.sh
src/launcher/runtimes/shared/: CMakeLists.txt  appimagelauncher_interface.c  appimagelauncher_interface.h
src/launcher/runtimes/type1/: CMakeLists.txt  fuseiso.c  iso_fs.h  isofs.c  isofs.h  main.c  rock.h
src/launcher/runtimes/type2/: CMakeLists.txt  elf.c  elf.h  light_elf.h  main.c  utils.c  utils.h
src/thumbnailer/: CMakeLists.txt  ThumbnailerDBusInterface.cpp  ThumbnailerDBusInterface.h  ThumbnailerDefines.h
src/updater/: CMakeLists.txt  UpdaterDBusInterface.cpp  UpdaterDBusInterface.h  UpdaterDefines.h  UpdaterService.cpp  UpdaterService.h  UpdaterTaskDBusInterface.cpp  UpdaterTaskDBusInterface.h
tests/: CMakeLists.txt  DownloadTestsData.cmake
tests/inspector/: AppStreamReaderTests.cpp  CMakeLists.txt  DesktopEntryReaderTests.cpp
tests/inspector/data/: appstream.xml  entry.desktop
tests/installer/: AppImageServicesInstallerTests.cpp  CMakeLists.txt
tests/launcher/: CMakeLists.txt
tests/launcher/runtimes/: CMakeLists.txt  runtime-shared-tests.cpp
